@@ -1,11 +1,9 @@
 using System;
 using System.Collections.Generic;
 
-using App;
-
 ///import com.robotacid.engine.Missile;
 ///import flash.display.Graphics;
-///import flash.geom.Rectangle;
+using flash.geom;
 
 namespace com.robotacid.phys {
 	
