@@ -1,0 +1,8 @@
+﻿
+namespace flash.display
+{
+    public class BitmapData
+	{
+
+    }
+}
